--- a/index.html
+++ b/index.html
@@ -19,34 +19,37 @@
 				<img src="./images/logo.svg" alt="">
 
 				<ul class="nav_menu">
-					<li>Product <img src="./images/icon-arrow-light.svg" alt="arrow-light"></li>
-					<!-- <ul>
-					<li>Overview</li>
-					<li>Pricing</li>
-					<li>Marketplace</li>
-					<li>Features</li>
-					<li>Integrations</li>
-				</ul> -->
+					<li><a href="#">Product <img src="./images/icon-arrow-light.svg" alt="arrow-light"></a>
+						<ul class="sub_menu product_list">
+							<li><a href="#">Overview</a></li>
+							<li><a href="#">Pricing</a></li>
+							<li><a href="#">Marketplace</a></li>
+							<li><a href="#">Features</a></li>
+							<li><a href="#">Integrations</a></li>
+						</ul>
+					</li>
 
-					<li>Company <img src="./images/icon-arrow-light.svg" alt="arrow-light"></li>
-					<!-- <ul>
-					<li>About</li>
-					<li>Team</li>
-					<li>Blog</li>
-					<li>Careers</li>
-				</ul> -->
+					<li><a href="#">Company <img src="./images/icon-arrow-light.svg" alt="arrow-light"></a>
+						<ul class="sub_menu company_list">
+							<li><a href="#">About</a></li>
+							<li><a href="#">Team</a></li>
+							<li><a href="#">Blog</a></li>
+							<li><a href="#">Careers</a></li>
+						</ul>
+					</li>
 
-					<li>Connect <img src="./images/icon-arrow-light.svg" alt="arrow-light"></li>
-					<!-- <ul>
-					<li>Contact</li>
-					<li>Newsletter</li>
-					<li>LinkedIn</li>
-				</ul> -->
+					<li><a href="#">Connect <img src="./images/icon-arrow-light.svg" alt="arrow-light"></a>
+						<ul class="sub_menu connect_list">
+							<li><a href="#">Contact</a></li>
+							<li><a href="#">Newsletter</a></li>
+							<li><a href="#">LinkedIn</a></li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 
-			<div class="singup">
-				Login
+			<div class="singup_container">
+				<a href="#">Login</a>
 				<button>Sign Up</button>
 			</div>
 		</nav>
@@ -57,12 +60,13 @@
 			<h4>Grow your audience and build your online brand</h4>
 			<div class="call_to_action">
 				<button>Start for Free</button>
-				<button class="learn_more_btn">Learn More</button>
+				<button>Learn More</button>
 			</div>
 		</div>
 		<!-- <img src="./images/bg-pattern-intro.svg" alt="bg image"> -->
 
 	</header>
+
 
 	Designed for the future
 
