--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	</header>
 
 
-	Designed for the future
+	<h2>Designed for the future</h2>
 
 	Introducing an extensible editor
 	Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
