web version done

--- a/index.html
+++ b/index.html
@@ -63,62 +63,101 @@
 				<button>Learn More</button>
 			</div>
 		</div>
-		<!-- <img src="./images/bg-pattern-intro.svg" alt="bg image"> -->
 
 	</header>
 
+	<section class="white">
+		<h2>Designed for the future</h2>
+		<div class="content">
+			<div class="text_box">
+				<h3>Introducing an extensible editor</h3>
+				<p>
+					Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
+					The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
+					videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
+					change the looks of a blog.
+				</p>
 
-	<h2>Designed for the future</h2>
+				<h3>Robust content management</h3>
+				<p>
+					Flexible content management enables users to easily move through posts. Increase the usability of your blog
+					by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+				</p>
+			</div>
 
-	Introducing an extensible editor
-	Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
-	The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
-	videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
-	change the looks of a blog.
+			<img src="./images/illustration-editor-desktop.svg" alt="desktop representation">
+		</div>
+	</section>
 
-	Robust content management
-	Flexible content management enables users to easily move through posts. Increase the usability of your blog
-	by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
+	<section>
+		<img src="./images/illustration-phones.svg" alt="phones illustration">
+		<div class="text_box">
+			<h2>State of the Art Infrastructure</h2>
+			<p>
+				With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
+				This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+			</p>
+		</div>
+	</section>
 
-	State of the Art Infrastructure
-	With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
-	This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+	<section class="white">
+		<div class="content">
+			<img src="./images/illustration-laptop-desktop.svg" alt="laptop illustration">
+			<div class="text_box">
+				<h3>Free, open, simple</h3>
+				<p>
+					Blogr is a free and open source application backed by a large community of helpful developers. It supports
+					features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
+					and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+				</p>
+				<h3>Powerful tooling</h3>
+				<p>
+					Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a
+					breeze,
+					but
+					capable of producing even the most complicated sites.
+				</p>
+			</div>
+		</div>
+	</section>
 
-	Free, open, simple
-	Blogr is a free and open source application backed by a large community of helpful developers. It supports
-	features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
-	and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+	<footer>
+		<ul>
+			<li><img src="./images/logo.svg" alt=""></li>
 
-	Powerful tooling
-	Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze,
-	but
-	capable of producing even the most complicated sites.
+			<li>Product
+				<ul class="footer_sub_menu">
+					<li><a href="#">Overview</a></li>
+					<li><a href="#">Pricing</a></li>
+					<li><a href="#">Marketplace</a></li>
+					<li><a href="#">Features</a></li>
+					<li><a href="#">Integrations</a></li>
+				</ul>
+			</li>
 
-	Product
+			<li>Company
+				<ul class="footer_sub_menu">
+					<li><a href="#">About</a></li>
+					<li><a href="#">Team</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Careers</a></li>
+				</ul>
+			</li>
 
-	Overview
-	Pricing
-	Marketplace
-	Features
-	Integrations
+			<li>Connect
+				<ul class="footer_sub_menu">
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Newsletter</a></li>
+					<li><a href="#">LinkedIn</a></li>
+				</ul>
+			</li>
+		</ul>
 
-	Company
-
-	About
-	Team
-	Blog
-	Careers
-
-	Connect
-
-	Contact
-	Newsletter
-	LinkedIn
-
-	<div class="attribution">
-		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-		Coded by <a href="#">Your Name Here</a>.
-	</div>
+		<!-- <div class="attribution">
+			Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+			Coded by <a href="#">Your Name Here</a>.
+		</div> -->
+	</footer>
 </body>
 
 </html>
